Final project changes

--- a/INTERNATIONAL.html
+++ b/INTERNATIONAL.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="static/styles.css">
     <style>
-        body {font-family: Georgia, serif}
+        body {font-family: Georgia}
         </style>
 </head>
 <body class="jumbotron text-white jumbotron-image shadow" style="background-image: url('pexels-badulescu-badulescu-2171077.jpg');">
@@ -18,11 +18,15 @@
                 <div class="jumbotron text-center"  style = "background-color: rgb(255, 255, 255);" >  
                     <h1>Vitamin Ventures</h1>
                     <br>
-                    <p>
-                        While not being a main focus, Vitamin Ventures has maintained a global pressence to a certain degree. Here we will 
-                        dive into web sales data focused internationally to identify if it would be worthwhile to spend efforts growing 
+                    <br>
+                    <h3>
+                        While not being a main focus, Vitamin Ventures has maintained a global pressence to a certain degree.
+                        <br>
+                        Here we will dive into web sales data focused internationally to identify if it would be worthwhile to spend efforts growing 
                         sales outside the US.
-                    </p>
+                        <br>
+                        <br>
+                    </h3>
                 <nav class="navigation"> 
                     <h2>
                         <a style="margin-right: 3em;" href="index.html"> 
@@ -39,121 +43,102 @@
                         </a> 
                     </h2>
                 </nav>
+                </div>
             </div>
         </div>
-        </div>
     </header>
-    <div class="container" id="visualizations">
-        <h2 class="visualization-header">Key Takeaway's</h2>
+    <div class="container" id="visualizations"  style="width:70%;">
+        <h1 class="visualization-header  text-center">Key Takeaways</h1>
         <br>
-        <p> 
+        <h3> 
             Vitmain Ventures has created a small presence simply by expanding their sales to global e-commerce. 
             Even with issues presented logistically due to the pandemic there has remained a demand for their products.
-        </p>
-        <p>
+            <br>
+            <br>
             We suggest that Vitamin Ventures focus on removing less popular products and determining where 
             production and logistics could better serve international warehouse spaces for cheaper international overhead.
             This would allow the company to focus on marketing their product and brand to further grow international presence. 
-        </p>
-        <!-- 
-                    <div class="row">
-                <div class="col-md-12 plots">
-                    <h2>Non- US net sales countries </h2>
-                    <p>
-                    </p>
-                    <br>
-                </div>
-                <div class="row">
-                    <div class="col-md-3 plots" style="margin-right: 3em;">
-                        <embed type="text/html"  src="Graphs/Sales_NonUS_pie.html" width="480" height="380">
-                    </div>
-                    <div class="col-md-3 plots">
-                        <embed type="text/html" src="Graphs/Sales_NonUS_2020_pie.html"  width="480" height="380">
-                    </div>  
-                    <div class="col-md-3 plots">
-                        <embed type="text/html" src="Graphs/Sales_NonUS_2021_pie.html"  width="550" height="380">
-                    </div>
-                </div>
-        </div>
-        -->
+        </h3>
+        <br>
         <div class="row  col-md-50  ">
             <div class="col-md-12 plots" >
-            <h2><b2>
+            <h2 class="text-center"><b>
                 Overall International Sales- 2020 through 2021
-            </b2></h2>
+            </b></h2>
+            <br>
             <embed type="text/html" src="Graphs/International_Sales_Line.html" width="1500" height="600">
             </div>
             <div class="col-md-12 summary" id="plot-summary">
             <br>
-            <p>
+            <h3>
                 From the start, the company seemed to have a good revenue internationally. Sales quickly declined within 
                 the first 2 months, as products most likely hit a wall with logistic issues due to the pandemic. 
                 Data here shows a correlation with the revival of internatial logistic chains resurfacing mid to late 2021. 
                 There is quite an obvious demand for the products and the company has a lot of room to grow globally.
-            </p>
+            </h3>
             </div>
         </div>
+        <br>
         <div class="row  col-md-50  ">
             <div class="col-md-12 plots" >
-            <h2><b2>
+            <h2 class="text-center"><b>
                 Top 10 International Countries
-            </b2></h2>
+            </b></h2>
+            <br>
             <embed type="text/html" src="Graphs/Top_10_International_Countries.html" width="1500" height="600">
             </div>
             <div class="col-md-12 summary" id="plot-summary">
-            <br>
-            <p>
+            <h3>
                 To no surprise, Canada maintains itslef as the top country for international sales. Focusing outside of Canada, 
                 many countries bring in very similar levels of revenue. Kuwait, Saudi Arabia, UAE, UK, and Australia are 
                 notably countries were sales could be focused. With the top countries identified product and sale stragies can 
                 now focus better on targetting what products in these countries are valued.
-            </p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-12 plots">
-                    <h2>Sales by Category per Month 2020 through 2021 </h2>
-            </div>
-            <div class="row">
-                <div class="col-md-12 plots">
-                        <embed type="text/html" src="Graphs/Sales_by_Categopry_per_Month_NonUS_bar.html" width="1500" height="600">
-                </div>
+            </h3>
             </div>
         </div>
         <br>
-                    <p>
-                        Product sales by category internationally, mimic the trend we have seen in the US. Most of the 
-                        web reviews have contributed to the popularity of the flagship product that lies in general health, and 
-                        the new product lines for immune and digestive support in 2021. 
-                    </p>
         <div class="row">
             <div class="col-md-12 plots">
-                <h2>Non US Sales by Category 2020 through 2021 </h2>
-                <p>
-                </p>
-                <br>
+                    <h2 class="text-center"><b>Sales by Category per Month 2020 through 2021 </b></h2>
             </div>
-            <div class="row">
+            <div class="col-md-12 plots">
+                <br>
+                <embed type="text/html" src="Graphs/Sales_by_Categopry_per_Month_NonUS_bar.html" width="1500" height="600">
+            </div>
+        </div>
+        <h3>
+                Product sales by category internationally, mimic the trend we have seen in the US. Most of the 
+                web reviews have contributed to the popularity of the flagship product that lies in general health, and 
+                the new product lines for immune and digestive support in 2021. 
+        </h3>
+        <br>
+        <div class="row">
+            <div class="col-md-12 plots">
+                <h2 class="text-center"><b>Non US Sales by Category 2020 through 2021</b> </h2>
+            </div>
+            <div class="col-md-12 plots">
                 <div class="col-md-6 plots" >
-                    <embed type="text/html"  src="Graphs/Sales_by_Category_NonUS_2020_pie.html" width="750" height="450">
+                    <br>
+                    <embed type="text/html"  src="Graphs/Sales_by_Category_NonUS_2020_pie.html" width="800" height="500">
                 </div>
                 <div class="col-md-6 plots">
-                    <embed type="text/html" src="Graphs/Sales_by_Category_NonUS_2021_pie.html"  width="750" height="450">
+                    <br>
+                    <embed type="text/html" src="Graphs/Sales_by_Category_NonUS_2021_pie.html"   width="800" height="500">
                 </div>  
             </div>
-            <br>
-            <p>
-                Again, here we see the same trend with the products in the US, except even stronger presence of the 
-                flagship general health products.
-            </p>
         </div>
+        <h3>
+            Again, here we see the same trend with the products in the US, except even stronger presence of the 
+            flagship general health products.
+        </h3>
+        <br>
         <div class="row">
             <div class="col-md-12 plots " >
-                <br>
-                <h2>Top 10 International Sales by Product 2020 through 2021 </h2>
+                <h2 class="text-center"><b>Top 10 International Sales by Product 2020 through 2021</b> </h2>
             </div>
             <div class="row">
                 <div class="col-md-12 ploSts" >
+                    <br>
                     <embed type="text/html"  src="Graphs/Sales_Top_Ten_by_Product_NonUS_2020_bar.html" width="1500" height="600">
                 </div>
                 <div class="col-md-12 plots">
@@ -161,19 +146,20 @@
                 </div>  
             </div>
             <br>
-            <p>
+            <h3>
                 The most notable difference in top product sales internationally would be that the new Elderberry product, 
                 while still high in sales, did not do as well as in the US. The original flagship products held a significant 
                 lead in 2021. This market seems to be very reactive to online reviews in popularity within the states. 
-            </p>
+            </h3>
         </div>
         <div class="row">
             <div class="col-md-12 plots " >
                 <br>
-                <h2>Bottom 10 International Sales by Product 2020 through 2021 </h2>
+                <h2 class="text-center"><b>Bottom 10 International Sales by Product 2020 through 2021 </b></h2>
             </div>
             <div class="row">
                 <div class="col-md-12 ploSts" >
+                    <br>
                     <embed type="text/html"  src="Graphs/Sales_Bottom_Ten_by_Product_NonUS_2020_bar.html" width="1500" height="600">
                 </div>
                 <div class="col-md-12 plots">
@@ -181,12 +167,12 @@
                 </div>  
             </div>
             <br>
-            <p>
+            <h3>
                 We still see very similar results in these bar charts to the US. While the company experimented with new products, it doesn't seem like many of them 
                 contributed very well to the company. Product strategy teams should re-evaluate where they would want to maintain focus in 
                 production without spreading themselves to thin. These kind of strategy meetings and analytics could have provided more 
                 bandwidth in product acquisition to prevent issues with selling out and losing a customer base due to supply issues.
-            </p>
+            </h3>
         </div>
     </div>
 </body>
