--- a/index.html
+++ b/index.html
@@ -8,31 +8,22 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="static/styles.css">
     <style>
-        body {font-family: Georgia, serif}
+        body {font-family: Georgia}
         </style>
 </head>
 <body class="jumbotron text-white jumbotron-image shadow" style="background-image: url('pexels-badulescu-badulescu-2171077.jpg');">
-    <header>
+    <header  der>
         <div class="row">
             <div class="col-md-12 jumbotron text-center"> 
                 <div class="jumbotron text-center"  style = "background-color: rgb(255, 255, 255);" >  
                     <h1>Vitamin Ventures</h1>
+                    <h3>
+                    Vitamin Ventures was founded to make lives better with their vitamins.
+                      <br>
+                    The company, with a global presence, manufactures and sells vitamins directly to consumers online, through select retailers and to third party wholesalers.
                     <br>
-                    <h2>
-                    <p>Vitamin Ventures was founded to make lives better with their vitamins.  </p>
-                    <p>The company, with a global presence, manufactures and sells vitamins directly to consumers online, through select retailers and to third party wholesalers.  </p>
-                    <p>They are currently in their 5th year of business, and they know they are growing astronomically, but they want to position themselves to be a lasting brand.</p>
-                    </h2>
-                              <!-- <p>Vitamin Ventures was founded to make lives better with their vitamins. The 
-                      company manufactures and sells vitamins directly to consumers online and to third 
-                      party wholesalers. They are currently in their 5th year of business, and they know 
-                      they are growing astronomically, but they want to position themeselves to be a 
-                      lasting brand</p>
-                    <p>We have been given 2 sets of data to study their current 
-                      trends. Our team will break down each product and examine the quantity and dollar
-                      sales by month, and we will further look at each channel to see where the company 
-                      should sell next. The data also provides us with customer locations, so we can 
-                      guage where the brand has opportunity.</p>--> 
+                    They are currently in their 5th year of business, and they know they are growing astronomically, but they want to position themselves to be a lasting brand.
+                    </h3>
                       <br>
                 <nav class="navigation"> 
                     <h2>
@@ -50,82 +41,98 @@
                     </a> 
                     </h2>
                 </nav>
+                </div>
             </div>
-          </div>
         </div>
     </header>
-    <div class="container">
-      <h1 class="col-md-50 text-center">Project Overview</h1>
-      <br>
-      <h2>
-        Our team has been given 2 years of data to study Vitamin Ventures’ current trends.  Our team will break down the analysis as follows:
-      </h2>
-      <h3>
-        <ul>
-        <li>
-          Channels & Products – The company sells products through 4 primary distribution channels:  
-      e-commerce (Amazon and Etsy), retailers (Walmart and Target), Vitamin Ventures’ proprietary website, 
-      <br>and miscellaneous wholesalers.  Overall and by channel, our data analysis includes unit and 
-      <br>dollar sales by month and actual product trends.
-        </li>
+    <div class="container"  style="width:80%;">
+      <div>
+        <h1 class="col-md-50 text-center">Project Overview</h1>
         <br>
-        <li>
-          USA Analysis – The data provided also has location breakouts.  Our analysis also gives an overview of sales and product trends for the United States which makes up 96% of Vitamin Ventures’ total company sales.  Vitamin Ventures sells in all 50 states and approximately 10,000 cities.
-        </li>
-        <br>
-        <li>
-          International Analysis – Vitamin Ventures has a global presence selling in 81 countries worldwide.  Sales and product trends are also provided here.
-        </li>
-      </ul>
-    </h3>
-    </div>
-    <br>
-    <div class="col-md-50 text-center"> 
-      <div class="col-md-12 plots">
-        <h2><b1>Vitamin Ventures Global Presence</b1></h2>
-        <br>
-        <br>
-        <embed type="text/html" src="Graphs/International_Presence.html" width="1500" height="600">
-      </div>
-      <div class="col-md-12 plots">
-        <h1>
-          Company Overview
-        </h1>
-          <h3><b1>Vitamin Ventures Sales % Growth - YTD 2021</b1></h3>
-          <embed type="text/html" src="Graphs/Gauge.html" width="1000" height="500">  
-        <p class="col-md-50 text-center">
-          <br>Overall, total net sales for Vitamin Ventures is $8.6 million for the year 2021.
-          <br>Vitamin Ventures experienced an increase in net sales over 2020 by a whopping 95%.
-        </p>
-      </div> 
-      <div class="col-md-12 plots">
-        <h3><b1>Vitamin Ventures Total Company Sales - 2020 through 2021</b1></h3>
-        <embed type="text/html" src="Graphs/Total_Net_Sales_2020-2021_line.html" width="1500" height="600">
-          <h2 class="col-md-50 text-center">
-            <b1>
-              This tremendous growth is represented above with upward climbing sales trend line over the last 2 years.  
-              <br>As will be presented in the following report, the substantial growth is due in large part to the company’s initiatives 
-              <br>to enter new markets such as big box retailers like Target and e-commerce sellers like Amazon and Etsy; however, 
-              <br>Vitamin Ventures’ company website sales remain the largest contributor with 55% of total 2021 sales.
-            </b1>
-          </h2>
-      </div>
-    </div>
-    <div class="col-md-12 contributors text-center">
-      <h3>
-        (Note:  Our team utilized HTML, CSS, Python, Pandas, Plotly and SQL to summarize and visualize the data)
+        <h2>
+          Our team has been given 2 years of data to study Vitamin Ventures’ current trends.  Our team will break down the analysis as follows:
+        </h2>
+        <h3>
+          <ul>
+          <li>
+            Channels & Products – The company sells products through 4 primary distribution channels:  
+        e-commerce (Amazon and Etsy), retailers (Walmart and Target), Vitamin Ventures’ proprietary website, 
+        <br>and miscellaneous wholesalers.  Overall and by channel, our data analysis includes unit and 
+        <br>dollar sales by month and actual product trends.
+          </li>
+          <br>
+          <li>
+            USA Analysis – The data provided also has location breakouts.  Our analysis also gives an overview of sales and product trends for the United States which makes up 96% of Vitamin Ventures’ total company sales.  Vitamin Ventures sells in all 50 states and approximately 10,000 cities.
+          </li>
+          <br>
+          <li>
+            International Analysis – Vitamin Ventures has a global presence selling in 81 countries worldwide.  Sales and product trends are also provided here.
+          </li>
+        </ul>
       </h3>
-    </div>
-    <div class="row">
-        <div class="col-md-12 contributors text-center">
-            <h2>Contributors</h2>
-            <p> Linnea Rice| Zarina Kossakova | Morgan Peterson | Holly Carter | Jillian Jagoda </p>
-            <br>
-            <h2> 
-                <a href="https://github.com/HotMochaNoWhip/Vitamin_Ventures"> GitHub </a>
+      </div>
+      <br>
+      <div class="col-md-50 text-center"> 
+        <div class="col-md-12 plots">
+          <h2><b>Vitamin Ventures Global Presence</b></h2>
+          <br>
+          <br>
+          <embed type="text/html" src="Graphs/International_Presence.html" width="1500" height="600">
+        </div>
+        <div class="col-md-12 plots">
+          <h1>
+            Company Overview
+          </h1>
+            <h3><b1>Vitamin Ventures Sales % Growth - YTD 2021</b1></h3>
+            <embed type="text/html" src="Graphs/Gauge.html" width="1000" height="500">  
+          <h3 class="col-md-50 text-center">
+            <br>Overall, total net sales for Vitamin Ventures is $8.6 million for the year 2021.
+            <br>Vitamin Ventures experienced an increase in net sales over 2020 by a whopping 95%.
+          </h3>
+        </div> 
+        <div class="col-md-12 plots">
+          <h2><b>Vitamin Ventures Total Company Sales - 2020 through 2021</b></h2>
+          <br>
+          <embed type="text/html" src="Graphs/Total_Net_Sales_2020-2021_line.html" width="1500" height="600">
+            <h2 class="col-md-50 text-center">
+              <b1>
+                This tremendous growth is represented above with upward climbing sales trend line over the last 2 years.  
+                <br>As will be presented in the following report, the substantial growth is due in large part to the company’s initiatives 
+                <br>to enter new markets such as big box retailers like Target and e-commerce sellers like Amazon and Etsy; however, 
+                <br>Vitamin Ventures’ company website sales remain the largest contributor with 55% of total 2021 sales.
+              </b1>
             </h2>
         </div>
+      </div>
+      <div class="col-md-12 contributors text-center">
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <h2>
+          <b>Our team utilized HTML, CSS, Python, Pandas, Plotly and SQL to summarize and visualize the data
+          </b>
+        </h2>
+      </div>
+      <div class="container">
+          <div class="col-md-12 contributors text-center">
+            <br>
+            <br>
+            <br>
+            <br>
+              <h2><b>Contributors</b>
+                <br>
+                <br>
+                Linnea Rice| Zarina Kossakova | Morgan Peterson | Holly Carter | Jillian Jagoda
+              </h2>
+              <br>
+              <h2> 
+                  <a href="https://github.com/HotMochaNoWhip/Vitamin_Ventures"> GitHub </a>
+              </h2>
+          </div>
+      </div>
     </div>
-
 </body>
 </html>
